New FCResult.getConditionalExpectation

--- a/lib/test/CMakeLists.txt
+++ b/lib/test/CMakeLists.txt
@@ -634,6 +634,7 @@ ot_check_test (FunctionalChaos_nd)
 ot_check_test (FunctionalChaos_2d)
 ot_check_test (FunctionalChaosValidation_ishigami IGNOREOUT)
 ot_check_test (FunctionalChaosValidation_2d IGNOREOUT)
+ot_check_test (FunctionalChaos_conditionalExpectation IGNOREOUT)
 ot_check_test (LeastSquaresExpansion_std IGNOREOUT)
 ot_check_test (IntegrationExpansion_std IGNOREOUT)
 ot_check_test (KrigingAlgorithm_std)
