FORM: Simplify parameters docstring

--- a/python/src/FORM_doc.i.in
+++ b/python/src/FORM_doc.i.in
@@ -3,6 +3,10 @@
 
 Refer to :ref:`form_approximation`.
 
+Available constructors:
+    FORM(*nearestPointAlgorithm, event, physicalStartingPoint*)
+
+
 Parameters
 ----------
 nearestPointAlgorithm : :class:`~openturns.OptimizationAlgorithm`
